--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -85,7 +85,7 @@ edit_page = {repo_url = "https://github.com/gcushen/hugo-academic", repo_branch 
 ############################
 
 # Enter contact details (optional). To hide a field, clear it to "".
-email = "xiaoqi.tan$@$utoronto.ca"
+email = ""
 # phone = "888 888 88 88"
 
 # Address
