--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -257,5 +257,5 @@ plugins_js  = []
 ## Marketing
 ############################
 [marketing]
-  google_analytics = ""
+  google_analytics = "UA-153197636-1"
   google_tag_manager = ""
