--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -5,15 +5,15 @@
 # Each configuration section is defined by a name in square brackets (e.g. `[outputs]`).
 
 # Title of your site
-title = "Xiaoqi Tan's Homepage"
+title = "XXX YYY's Homepage"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "https://xiaoqitan.org/"
+baseurl = "https://xxxyyy.org/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
-copyright = "Xiaoqi Tan &copy; 2018-{year}"
+copyright = "XXX YYY &copy; 2018-{year}"
 
 ############################
 ## Advanced options below ##
