--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -9,14 +9,14 @@
   weight = 10
 
 [[main]]
-  name = "News"
-  url = "#posts"
-  weight = 15
+  name = "Research"
+  url = "#research"
+  weight = 20
 
 [[main]]
-  name = "Research"
+  name = "Projects"
   url = "/research"
-  weight = 20
+  weight = 25
 
 [[main]]
   name = "Publications"
