--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -14,14 +14,15 @@
   weight = 20
 
 [[main]]
-  name = "Projects"
-  url = "/research"
-  weight = 25
+  name = "Publications"
+  url = "/publication"
+  weight = 30
 
 [[main]]
-  name = "Publications"
-  url = "/#selected"
-  weight = 30
+  name = "Projects"
+  url = "#projects"
+  weight = 35
+
 
 [[main]]
   name = "Talks"
