--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -10,7 +10,7 @@
 
 [[main]]
   name = "Research"
-  url = "#research"
+  url = "research"
   weight = 20
 
 [[main]]
@@ -20,7 +20,7 @@
 
 [[main]]
   name = "Talks"
-  url = "/#talks"
+  url = "/talk"
   weight = 40
 
 [[main]]
